--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -1008,6 +1008,13 @@ For extra marks, with would be great if you could associate a bundle
 with a facet as well, so that the IO, hashing etc types would go into
 the right facet folders rather than under types.
 
+Notes:
+
+- once we have the concept of products and once we support meta-data
+  for vcpkg (other story), we can then generate a "vcpkg script" per
+  product. This is a script that gets vcpkg, bootstraps it and
+  installs all of the dependent packages.
+
 *** Make explicit all implicit modeling elements                      :story:
 
 At present we have a number of modeling elements that can be
@@ -9986,24 +9993,6 @@ mechanism with a =Profiling= build type.
 See:
 
 - [[https://github.com/Milkyway-at-home/milkywayathome_client/blob/master/cmake_modules/Profiling.cmake][milkywayathome_client's profiling for CMake]]
-
-*** Build boost for MinGW                                             :story:
-
-We do not have a MinGW build on windows. This could probably be easily
-added. Steps:
-
-- download and install =mingw= on the windows VM.
-- create a vcpkg package using =mingw=, and upload it to dropbox.
-- setup a new build on appveyor on the build matrix for mingw.
-
-Notes:
-
-- In order to add support for appveyor we need to fix the path:
-
-:  # Workaround for CMake not wanting sh.exe on PATH for MinGW
-:  - ps: PATH=%PATH%:C:\Program Files\Git\usr\bin;=%
-: before_build:
-:  - ps: set PATH=C:\MinGW\bin;%PATH%
 
 *** Add support for coverity analysis                                 :story:
 
