--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,31 +12,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-06 Wed 12:00]
+#+CAPTION: Clock summary at [2019-03-06 Wed 12:06]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *51:21* |       |       | 100.0 |
+| *Total time*                                                 | *51:26* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 51:21   |       |       | 100.0 |
-| Active                                                       |         | 51:21 |       | 100.0 |
+| Stories                                                      | 51:26   |       |       | 100.0 |
+| Active                                                       |         | 51:26 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.8 |
 | Sprint and product backlog grooming                          |         |       |  1:03 |   2.0 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   7.3 |
 | Move generation model out of coding                          |         |       |  4:22 |   8.5 |
-| Rename endomodel to just model                               |         |       |  2:11 |   4.3 |
+| Rename endomodel to just model                               |         |       |  2:11 |   4.2 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   3.5 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   6.2 |
 | Move injection processing out of coding                      |         |       | 18:39 |  36.3 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.8 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   1.1 |
-| Add option for northwind tests                               |         |       |  0:54 |   1.8 |
+| Add option for northwind tests                               |         |       |  0:54 |   1.7 |
 | Add DTL to vcpkg                                             |         |       |  5:15 |  10.2 |
-| Remove coding options                                        |         |       |  3:59 |   7.8 |
+| Remove coding options                                        |         |       |  3:59 |   7.7 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.2 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.6 |
-| Add basic "diff mode"                                        |         |       |  1:52 |   3.6 |
+| Add basic "diff mode"                                        |         |       |  1:57 |   3.8 |
 | Fix northwind tests on windows                               |         |       |  1:00 |   1.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -713,6 +713,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Add basic "diff mode"                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-03-06 Wed 12:01]--[2019-03-06 Wed 12:06] =>  0:05
     CLOCK: [2019-03-06 Wed 11:31]--[2019-03-06 Wed 12:00] =>  0:29
     CLOCK: [2019-03-05 Tue 15:07]--[2019-03-05 Tue 15:19] =>  0:12
     CLOCK: [2019-03-05 Tue 11:16]--[2019-03-05 Tue 11:41] =>  0:25
