--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,32 +12,32 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-06 Wed 12:06]
+#+CAPTION: Clock summary at [2019-03-06 Wed 15:05]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *51:26* |       |       | 100.0 |
+| *Total time*                                                 | *53:32* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 51:26   |       |       | 100.0 |
-| Active                                                       |         | 51:26 |       | 100.0 |
-| Edit release notes for previous sprint                       |         |       |  1:27 |   2.8 |
+| Stories                                                      | 53:32   |       |       | 100.0 |
+| Active                                                       |         | 53:32 |       | 100.0 |
+| Edit release notes for previous sprint                       |         |       |  1:27 |   2.7 |
 | Sprint and product backlog grooming                          |         |       |  1:03 |   2.0 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   7.3 |
-| Move generation model out of coding                          |         |       |  4:22 |   8.5 |
-| Rename endomodel to just model                               |         |       |  2:11 |   4.2 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   7.0 |
+| Move generation model out of coding                          |         |       |  4:22 |   8.2 |
+| Rename endomodel to just model                               |         |       |  2:11 |   4.1 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   3.5 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   6.2 |
-| Move injection processing out of coding                      |         |       | 18:39 |  36.3 |
-| Create a extraction model post-processing chain              |         |       |  0:56 |   1.8 |
-| Move coding to generation model transform into orchestration |         |       |  0:33 |   1.1 |
+| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   3.3 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   5.9 |
+| Move injection processing out of coding                      |         |       | 18:39 |  34.8 |
+| Create a extraction model post-processing chain              |         |       |  0:56 |   1.7 |
+| Move coding to generation model transform into orchestration |         |       |  0:33 |   1.0 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.7 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |  10.2 |
-| Remove coding options                                        |         |       |  3:59 |   7.7 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   9.8 |
+| Remove coding options                                        |         |       |  3:59 |   7.4 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.2 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.6 |
-| Add basic "diff mode"                                        |         |       |  1:57 |   3.8 |
-| Fix northwind tests on windows                               |         |       |  1:00 |   1.9 |
+| Add basic "diff mode"                                        |         |       |  1:57 |   3.6 |
+| Fix northwind tests on OSX and Windows                       |         |       |  3:06 |   5.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -792,8 +792,10 @@ diagram.
 
 We could use something like the [[https://code.google.com/p/dtl-cpp/wiki/Tutorial][DTL library]].
 
-*** STARTED Fix northwind tests on windows                            :story:
+*** STARTED Fix northwind tests on OSX and Windows                    :story:
     :LOGBOOK:
+    CLOCK: [2019-03-06 Wed 13:02]--[2019-03-06 Wed 15:04] =>  2:02
+    CLOCK: [2019-03-06 Wed 12:07]--[2019-03-06 Wed 12:11] =>  0:04
     CLOCK: [2019-03-06 Wed 08:00]--[2019-03-06 Wed 09:00] =>  1:00
     :END:
 
@@ -816,6 +818,14 @@ postgres:
 :    - psql -f %APPVEYOR_BUILD_FOLDER%\build\scripts\setup_postgres.sql -U postgres
 :    - if DEFINED msvc_setup_path call "%msvc_setup_path%" %msvc_setup_arg%
 :    - cd %APPVEYOR_BUILD_FOLDER%
+
+At present we are building northwind on all platforms, but the tests
+are being excluded on OSX and windows, so we are not really testing
+the linking, just the compilation. One of the problems is that we
+conflated the running of the tests (for which we need a postgres
+server) with the building of the tests (which we should always do
+whenever we find all the required dependencies). However, it seems a
+bit silly yo have to have two flags for this.
 
 *** Rename =transformation_error= to =transform_exception=            :story:
 
