--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,31 +12,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-06 Wed 18:02]
+#+CAPTION: Clock summary at [2019-03-06 Wed 19:02]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *56:26* |       |       | 100.0 |
+| *Total time*                                                 | *56:52* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 56:26   |       |       | 100.0 |
-| Active                                                       |         | 56:26 |       | 100.0 |
-| Edit release notes for previous sprint                       |         |       |  1:27 |   2.6 |
-| Sprint and product backlog grooming                          |         |       |  1:03 |   1.9 |
+| Stories                                                      | 56:52   |       |       | 100.0 |
+| Active                                                       |         | 56:52 |       | 100.0 |
+| Edit release notes for previous sprint                       |         |       |  1:27 |   2.5 |
+| Sprint and product backlog grooming                          |         |       |  1:03 |   1.8 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   6.6 |
 | Move generation model out of coding                          |         |       |  4:22 |   7.7 |
-| Rename endomodel to just model                               |         |       |  2:11 |   3.9 |
+| Rename endomodel to just model                               |         |       |  2:11 |   3.8 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   3.2 |
+| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   3.1 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   5.6 |
-| Move injection processing out of coding                      |         |       | 18:39 |  33.0 |
-| Create a extraction model post-processing chain              |         |       |  0:56 |   1.7 |
+| Move injection processing out of coding                      |         |       | 18:39 |  32.8 |
+| Create a extraction model post-processing chain              |         |       |  0:56 |   1.6 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   1.0 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.6 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   9.3 |
-| Remove coding options                                        |         |       |  3:59 |   7.1 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   9.2 |
+| Remove coding options                                        |         |       |  3:59 |   7.0 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.6 |
-| Add basic "diff mode"                                        |         |       |  6:53 |  12.2 |
+| Add basic "diff mode"                                        |         |       |  7:19 |  12.9 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -713,6 +713,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Add basic "diff mode"                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-03-06 Wed 18:46]--[2019-03-06 Wed 19:02] =>  0:16
     CLOCK: [2019-03-06 Wed 18:02]--[2019-03-06 Wed 18:12] =>  0:10
     CLOCK: [2019-03-06 Wed 17:12]--[2019-03-06 Wed 18:01] =>  0:49
     CLOCK: [2019-03-06 Wed 16:11]--[2019-03-06 Wed 17:12] =>  1:01
