--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,31 +12,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 10:36]
+#+CAPTION: Clock summary at [2019-03-07 Thu 11:57]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *59:16* |       |       | 100.0 |
+| *Total time*                                                 | *60:36* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 59:16   |       |       | 100.0 |
-| Active                                                       |         | 59:16 |       | 100.0 |
+| Stories                                                      | 60:36   |       |       | 100.0 |
+| Active                                                       |         | 60:36 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.4 |
-| Sprint and product backlog grooming                          |         |       |  1:03 |   1.8 |
-| Implement text model generation chain in generation          |         |       |  3:45 |   6.3 |
-| Move generation model out of coding                          |         |       |  4:22 |   7.4 |
-| Rename endomodel to just model                               |         |       |  2:11 |   3.7 |
+| Sprint and product backlog grooming                          |         |       |  1:03 |   1.7 |
+| Implement text model generation chain in generation          |         |       |  3:45 |   6.2 |
+| Move generation model out of coding                          |         |       |  4:22 |   7.2 |
+| Rename endomodel to just model                               |         |       |  2:11 |   3.6 |
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
-| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   3.0 |
-| Split annotations processing into two phases                 |         |       |  3:10 |   5.3 |
-| Move injection processing out of coding                      |         |       | 18:39 |  31.5 |
-| Create a extraction model post-processing chain              |         |       |  0:56 |   1.6 |
+| Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.9 |
+| Split annotations processing into two phases                 |         |       |  3:10 |   5.2 |
+| Move injection processing out of coding                      |         |       | 18:39 |  30.8 |
+| Create a extraction model post-processing chain              |         |       |  0:56 |   1.5 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.9 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.5 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   8.9 |
-| Remove coding options                                        |         |       |  3:59 |   6.7 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   8.7 |
+| Remove coding options                                        |         |       |  3:59 |   6.6 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
 | Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.6 |
-| Add basic "diff mode"                                        |         |       |  9:43 |  16.4 |
+| Add basic "diff mode"                                        |         |       | 11:03 |  18.2 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -713,6 +713,7 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Add basic "diff mode"                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-03-07 Thu 10:37]--[2019-03-07 Thu 11:57] =>  1:20
     CLOCK: [2019-03-07 Thu 09:31]--[2019-03-07 Thu 10:36] =>  1:05
     CLOCK: [2019-03-07 Thu 06:15]--[2019-03-07 Thu 07:34] =>  1:19
     CLOCK: [2019-03-06 Wed 18:46]--[2019-03-06 Wed 19:02] =>  0:16
