--- a/doc/agile/v1/sprint_backlog_12.org
+++ b/doc/agile/v1/sprint_backlog_12.org
@@ -12,14 +12,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-07 Thu 11:57]
+#+CAPTION: Clock summary at [2019-03-07 Thu 12:04]
 | <75>                                                         |         |       |       |       |
 | Headline                                                     | Time    |       |       |     % |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                 | *60:36* |       |       | 100.0 |
+| *Total time*                                                 | *60:42* |       |       | 100.0 |
 |--------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                      | 60:36   |       |       | 100.0 |
-| Active                                                       |         | 60:36 |       | 100.0 |
+| Stories                                                      | 60:42   |       |       | 100.0 |
+| Active                                                       |         | 60:42 |       | 100.0 |
 | Edit release notes for previous sprint                       |         |       |  1:27 |   2.4 |
 | Sprint and product backlog grooming                          |         |       |  1:03 |   1.7 |
 | Implement text model generation chain in generation          |         |       |  3:45 |   6.2 |
@@ -28,15 +28,15 @@
 | Remove exomodel remnants                                     |         |       |  0:03 |   0.1 |
 | Consider adding a dot graph of the transforms to probing     |         |       |  1:47 |   2.9 |
 | Split annotations processing into two phases                 |         |       |  3:10 |   5.2 |
-| Move injection processing out of coding                      |         |       | 18:39 |  30.8 |
+| Move injection processing out of coding                      |         |       | 18:39 |  30.7 |
 | Create a extraction model post-processing chain              |         |       |  0:56 |   1.5 |
 | Move coding to generation model transform into orchestration |         |       |  0:33 |   0.9 |
 | Add option for northwind tests                               |         |       |  0:54 |   1.5 |
-| Add DTL to vcpkg                                             |         |       |  5:15 |   8.7 |
+| Add DTL to vcpkg                                             |         |       |  5:15 |   8.6 |
 | Remove coding options                                        |         |       |  3:59 |   6.6 |
 | Rename the =transform= method to =apply=                     |         |       |  0:05 |   0.1 |
-| Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.6 |
-| Add basic "diff mode"                                        |         |       | 11:03 |  18.2 |
+| Try to fix valgrind warning on =find_files=                  |         |       |  0:20 |   0.5 |
+| Add basic "diff mode"                                        |         |       | 11:09 |  18.4 |
 | Fix northwind tests on OSX and Windows                       |         |       |  1:04 |   1.8 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -713,6 +713,8 @@ We seem to be doing something wrong with directory iterators:
 
 *** STARTED Add basic "diff mode"                                     :story:
     :LOGBOOK:
+    CLOCK: [2019-03-07 Thu 12:46]--[2019-03-07 Thu 13:39] =>  0:53
+    CLOCK: [2019-03-07 Thu 11:58]--[2019-03-07 Thu 12:04] =>  0:06
     CLOCK: [2019-03-07 Thu 10:37]--[2019-03-07 Thu 11:57] =>  1:20
     CLOCK: [2019-03-07 Thu 09:31]--[2019-03-07 Thu 10:36] =>  1:05
     CLOCK: [2019-03-07 Thu 06:15]--[2019-03-07 Thu 07:34] =>  1:19
@@ -841,6 +843,14 @@ conflated the running of the tests (for which we need a postgres
 server) with the building of the tests (which we should always do
 whenever we find all the required dependencies). However, it seems a
 bit silly yo have to have two flags for this.
+
+*** STARTED Update metrics in OpenHub                                 :story:
+    :LOGBOOK:
+    CLOCK: [2019-03-07 Thu 12:05]--[2019-03-07 Thu 12:18] =>  0:13
+    :END:
+
+For some reason our metrics are stuck at 5 months ago or so. It is
+actually mildly useful to know the number of lines of code etc.
 
 *** Fabric generates forward decls with no path                       :story:
 
